--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Install NodeJS 
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: 'npm'
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
